feat(api): create search & autocomplete endpoints
